Update captcah swagger
